fixed spacing on services, home page

--- a/stylesheets/index-style.css
+++ b/stylesheets/index-style.css
@@ -591,7 +591,7 @@ body {
     display: grid;
     grid-template-columns:  repeat(2, 1fr);
     grid-template-rows: 4fr, 1fr;
-    grid-gap: max(10px ,calc(10 / var(--messurments)* 100vw));
+    grid-gap: max(30px ,calc(30 / var(--messurments)* 100vw));
 }
 .card {
     display: flex;
